--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-hans">
   <head>
-    <title>127.0.0.1/zh/</title>
-    <link rel="canonical" href="127.0.0.1/zh/">
+    <title>oxwo.github.io/zh/</title>
+    <link rel="canonical" href="oxwo.github.io/zh/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=127.0.0.1/zh/">
+    <meta http-equiv="refresh" content="0; url=oxwo.github.io/zh/">
   </head>
 </html>
