--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-hans">
+<html lang="zh">
   <head>
     <title>https://oxwo.github.io/zh/</title>
     <link rel="canonical" href="https://oxwo.github.io/zh/">
